; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_cryptd.c_cryptd_hash_enqueue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_cryptd.c_cryptd_hash_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.cryptd_hash_request_ctx = type { i32 }
%struct.crypto_ahash = type { i32 }
%struct.cryptd_queue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ahash_request*, i32)* @cryptd_hash_enqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cryptd_hash_enqueue(%struct.ahash_request* %0, i32 %1) #0 {
  %3 = alloca %struct.ahash_request*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cryptd_hash_request_ctx*, align 8
  %6 = alloca %struct.crypto_ahash*, align 8
  %7 = alloca %struct.cryptd_queue*, align 8
  store %struct.ahash_request* %0, %struct.ahash_request** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %9 = call %struct.cryptd_hash_request_ctx* @ahash_request_ctx(%struct.ahash_request* %8)
  store %struct.cryptd_hash_request_ctx* %9, %struct.cryptd_hash_request_ctx** %5, align 8
  %10 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %11 = call %struct.crypto_ahash* @crypto_ahash_reqtfm(%struct.ahash_request* %10)
  store %struct.crypto_ahash* %11, %struct.crypto_ahash** %6, align 8
  %12 = load %struct.crypto_ahash*, %struct.crypto_ahash** %6, align 8
  %13 = call i32 @crypto_ahash_tfm(%struct.crypto_ahash* %12)
  %14 = call %struct.cryptd_queue* @cryptd_get_queue(i32 %13)
  store %struct.cryptd_queue* %14, %struct.cryptd_queue** %7, align 8
  %15 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %16 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.cryptd_hash_request_ctx*, %struct.cryptd_hash_request_ctx** %5, align 8
  %20 = getelementptr inbounds %struct.cryptd_hash_request_ctx, %struct.cryptd_hash_request_ctx* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %23 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32 %21, i32* %24, align 4
  %25 = load %struct.cryptd_queue*, %struct.cryptd_queue** %7, align 8
  %26 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %27 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %26, i32 0, i32 0
  %28 = call i32 @cryptd_enqueue_request(%struct.cryptd_queue* %25, %struct.TYPE_2__* %27)
  ret i32 %28
}

declare dso_local %struct.cryptd_hash_request_ctx* @ahash_request_ctx(%struct.ahash_request*) #1

declare dso_local %struct.crypto_ahash* @crypto_ahash_reqtfm(%struct.ahash_request*) #1

declare dso_local %struct.cryptd_queue* @cryptd_get_queue(i32) #1

declare dso_local i32 @crypto_ahash_tfm(%struct.crypto_ahash*) #1

declare dso_local i32 @cryptd_enqueue_request(%struct.cryptd_queue*, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
